test(cli): pin both spellings of every --add-* flag; retract the W7-56 parser claim
W7-56 reported that CratonVM's launcher mis-parses the space-separated
`--add-opens M/P=T` form, swallowing the following `-cp` and dying with
"Could not find or load main class", and advised readers to use the `=`
spelling. Re-measured: it does not.

All eight combinations of {--add-opens, --add-exports, --add-reads,
--add-modules} x {space, =} run the main class, on the current binary AND on
the pre-merge control 7d4d545e0. Neither spelling ever produced "Could not
find or load main class" on either binary. normalize_java_launcher_argv
rewrites -cp to --classpath ahead of clap, and every --add-* flag is already
in VALUE_TAKING_OPTS.

The likely cause of the original observation is the ordinary one: an empty
classpath directory produces exactly that message, and it was attributed to
the flag spelling standing next to it.

Adds a regression test that asserts, for each flag and each spelling, both
that the flag keeps its own value and that -cp and the main class survive.
The second half is the load-bearing one. It goes through
normalize_java_launcher_argv rather than clap directly, because clap alone
reads a bare `-cp DIR` as short -c with attached value "p" -- testing clap
in isolation would fail for a reason unrelated to the flag under test.

Mutation-checked: an injected --add-opens arm that swallows the following
token turns the test red; reverting turns it green.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>